# FIUBA-duck-game-G4

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  sniper.cpp
client/: CMakeLists.txt  anotaciones.txt  client.cpp  client.h  client_event.h  client_game_state.h  client_host.cpp  client_host.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  drawable.h  drawer.cpp  drawer.h  drawer_duck.cpp  drawer_duck.h  drawer_weapon.cpp  drawer_weapon.h  keyboard_controller.cpp  keyboard_controller.h  main.cpp  main_server.cpp  player_position.h  protocol_client.cpp  protocol_client.h  protocolo.txt  sprite.h  vector_player.cpp  vector_player.h  vector_sprite.cpp  vector_sprite.h  vector_throwable.h  zoom_handler.cpp  zoom_handler.h
client/GameDuckV2/: lobby.h  lobby.ui  lobby_form.ui
client/animation/: animation.cpp  animation.h  animation_loader.cpp  animation_loader.h  animation_weapon.cpp  animation_weapon.h
client/animations_config/: armadura.yaml  armor.yaml  box.yaml  bullet.yaml  duck.yaml  floor_map01.yaml  weapon.yaml
client/config/: game_config.h
client/drawers/: animation.cpp  animation.h  animation_loader.cpp  animation_loader.h  animation_weapon.cpp  animation_weapon.h  drawable.cpp  drawable.h  drawer.cpp  drawer.h  drawer_armor.h  drawer_box.cpp  drawer_box.h  drawer_bullet.cpp  drawer_bullet.h  drawer_duck.h  drawer_equipment.cpp  drawer_equipment.h  drawer_floor.cpp  drawer_floor.h  drawer_player.cpp  drawer_player.h  drawer_text.cpp  drawer_text.h  drawer_weapon.cpp  drawer_weapon.h  renderer_helper.h  (+1 more)
(+404 files in other folders)
